--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,25 +40,70 @@ services:
     container_name: storage-eozkill
 
   elasticsearch:
-    build: build/es
-    volumes:
-        - es-data:/usr/share/elasticsearch/data
-        - ./build/es/config:/usr/share/elasticsearch/config
-    ports:
-        - 9200:9200
-    expose:
-        - 9300
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.3.0
+    container_name: elasticsearch
+    environment:
+      - cluster.name=dev-kibana-cluster
+      - node.name=dev-kibana-01
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=false
+      - xpack.monitoring.enabled=true
+      - xpack.watcher.enabled=false
+      - xpack.graph.enabled=false
+      - xpack.monitoring.history.duration=1d
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
     ulimits:
-        nofile:
-            soft: 65536
-            hard: 65536
-  kibana:
-    build: build/kibana
-    links:
-        - elasticsearch:elasticsearch
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    mem_limit: 2g
+    memswap_limit: 2g
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - es_data1:/usr/share/elasticsearch/data1
     ports:
-        - 5601:5601
+      - 9200:9200
+    networks:
+      - kibana_net
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
+  kibana:
+    image: docker.elastic.co/kibana/kibana:5.3.0
+    container_name: kibana
+    environment:
+      ELASTICSEARCH_URL: "http://elasticsearch:9200"
+      XPACK_MONITORING_ELASTICSEARCH_URL: "http://elasticsearch:9200"
+      XPACK_SECURITY_ENABLED: "false"
+    ports:
+     - 5601:5601
+    networks:
+      - kibana_net
+    mem_limit: 2g
+    memswap_limit: 2g
+    depends_on:
+      - elasticsearch
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
 
 volumes:
-    es-data:
-        driver: local
+  es_data1:
+    driver: local
+
+networks:
+  kibana_net:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.99.0.0/24
+          gateway: 172.99.0.1
